Coverted the score out of 10 in aptitude test

--- a/templates/aptitude/result.html
+++ b/templates/aptitude/result.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Quiz Result</h1>
     <p>Your score: {{ score }} out of {{ total }}</p>
+    <p>Score out of 10: {{aptitude_score}}</p>
 </body>
 </html>
