--- a/templates/aptitude/result.html
+++ b/templates/aptitude/result.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Quiz Result</h1>
     <p>Your score: {{ score }} out of {{ total }}</p>
-    <p>Score out of 10: {{aptitude_score}}</p>
+    <p>Score out of 10: {{apt_score}}</p>
 </body>
 </html>
