--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Signup</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='signup.css') }}">
-</head>
-<body>
-    <h1>Placement Predictor</h1>
-    <form action="/signup_page" method="post" class="form-signup">
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br>
-        <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password" required><br>
-        <label for="confirmPassword">Confirm Password:</label><br>
-        <input type="password" id="confirmPassword" name="confirmPassword" required><br>
-        <button class="btn btn-lg btn-secondary btn-block mt-3" type="submit">Signup</button>
-    </form>
-    {% if error %}
-        <p>{{ error }}</p>
-    {% endif %}
-</body>
+    <head>
+        <title>Signup</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="{{ url_for('static', filename='signup.css') }}">
+    </head>
+    <body>
+        <div class="container">
+            <div class="form-container .sign-in-container">
+                <h1 class="mb-4">PLACEMENT PREDICTOR</h1>
+                <form action="/signup_page" method="post" class="form-signup">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required>
+                    <label for="confirmPassword">Confirm Password</label>
+                    <input type="password" id="confirmPassword" name="confirmPassword" required>
+                    <button  type="submit">Sign up</button>
+                </form>
+                {% if error %}
+                    <p>{{ error }}</p>
+                {% endif %}
+            </div>
+            <div class="overlay-panel overlay-right">
+			    <h1 class="signup-h1">Hello, Friend!</h1>
+			    <p>Already Have An Account?</p>
+			    <button class="ghost" id="login"><a href="./" class="btn btn-lg  btn-block mt-3">Login</a></button>
+		    </div>
+        </div>
+    </body>
 </html>
