--- a/templates/form.html
+++ b/templates/form.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <div class="menu1">
-        <h1 class="logo mb-10 text-blue-600 text-3xl font-bold font-sans">Placement Predictor</h1>
+        <h1 class="logo">PLACEMENT PREDICTOR</h1>
+        <h3>Enter Details</h3>
     </div>
-    <p class="form-para">Enter Details</p>
     <div class="div-form">
+        
         <form action="/submit_form/{{ user_id }}/{{ user_email }}" id="placementForm" method="POST">
             <div class="col-container">
                 <div class="col1">
@@ -31,10 +32,11 @@
                     </div>
                     <label class="form-label" for="backlogs">Any Backlogs</label>
                     <input class="form-input" type="number" name="backlogs" id="backlogs" required>
-                    <label class="form-label" for="num_internships">Number of Internships</label>
-                    <input class="form-input" type="number" name="num_internships" id="num_internships" required>
+                    
                 </div>
                 <div class="col1">
+                    <label class="form-label" for="num_internships">Number of Internships</label>
+                    <input class="form-input" type="number" name="num_internships" id="num_internships" required>
                     <label class="form-label" for="age">Age</label>
                     <input class="form-input" type="text" name="age" id="age" placeholder="Enter Age" required>
                     <label class="form-label" for="gender">Gender</label>
