Admin signin page added

--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -12,8 +12,8 @@
         <div class="container">
             <div class="form-container .sign-in-container">
                 <h1 class="mb-4">Placement Predictor</h1>
-                <form method="POST" action="/login" class="form-signin">
-                    <h2 class="form-signin-heading">Sign in</h2>
+                <form method="POST" action="/admin_home" class="form-signin">
+                    <h2 class="form-signin-heading">Admin signin</h2>
                     <label for="inputEmail" class="sr-only">Email address</label>
                     <input type="email" id="inputEmail" class="form-control mb-3" placeholder="Email address" name="email" required autofocus>
                     <label for="inputPassword" class="sr-only">Password</label>
@@ -27,12 +27,6 @@
                     </div>
                 {% endif %}
             </div>
-            <div class="overlay-panel overlay-right">
-                <a href="/admin_login">Login as admin</a>
-			    <h1 class="signup-h1">Hello, Friend!</h1>
-			    <p>Enter your personal details and start journey with us</p>
-			    <button class="ghost" id="signUp"><a href="/signup" class="btn btn-lg  btn-block mt-3">Sign up</a></button>
-		    </div>
         
         </div> <!-- /container -->
 
