--- a/static/quiz.css
+++ b/static/quiz.css
@@ -54,3 +54,9 @@ h1{
     background-color: #FF4B2B;
     color: #ffffff;
 }
+.timer{
+    margin-right: 250px;
+    font-size: 20px;
+    font-weight: bold;
+    font-family:Verdana, Geneva, Tahoma, sans-serif
+}
