--- a/templates/home.html
+++ b/templates/home.html
@@ -58,7 +58,7 @@
     <div class="menu">
         <h1 class="logo">PLACEMENT PREDICTOR</h1>
         <button class="menu-item">Courses</button>
-        <button class="menu-item" onclick="logout()">Logout</button>   
+        <button class="menu-item"><a class="logout-link" href="/">Logout</a></button>
     </div>
     <div class="profile">
         <h1 class="title">Profile</h1>
