--- a/static/signup.css
+++ b/static/signup.css
@@ -40,7 +40,7 @@ p {
 button {
 	border-radius: 20px;
 	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
+	background-color: #ff4b2b;
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
@@ -58,9 +58,10 @@ button:focus {
 }
 
 button.ghost {
-	background-color: transparent;
+	background-color: rgb(238, 238, 238,0.3);
 	border-color: #FFFFFF;
 }
+
 form {
 	background-color: #FFFFFF;
 	display: flex;
