--- a/templates/result.html
+++ b/templates/result.html
@@ -14,8 +14,17 @@
             <h1>Hello {{ userData.name }}</h1>
             <h3 class="perc">Your percentage of chance to get placed : <span>{{ pro }}</span></h3></h3>
             {% if pro < 50 %}
-                <h3>Your chances of getting placed are below average. <span class="prob">low</span><br></h3>
+                <h3>Your chances of getting placed are <span class="prob">below average</span><br></h3>
                 <p class="rec">Here are some recommendatons to improve</p>                
+                <div class="result">
+                {% for r in rec %}
+                    <p>{{r}}</p>
+                {% endfor %}
+                </div>              
+            {% endif %}
+            {% if pro >= 50 %}
+                <h3>Congratulations! Your chances of getting placed are <span class="prob">high</span><br></h3>
+                <p class="rec">Here are list of companies that  you have chance to get placed</p>                
                 <div class="result">
                 {% for r in rec %}
                     <p>{{r}}</p>
