Scores are rounded

--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -9,6 +9,9 @@
     async function displayStudent(){
         window.location.href=`/students`;
     }
+    async function logout(){
+        window.location.href=`/admin_login`;
+    }
     </script>
 </head>
 <body>
