--- a/templates/resume/edit.html
+++ b/templates/resume/edit.html
@@ -13,7 +13,7 @@
 <body>
     <h1>Edit Resume</h1>
     <div id="pdf-container"></div>
-    <form id="edit-form" action="{{ url_for('save_resume', filename=filename) }}" method="post">
+    <form id="edit-form" action="{{ url_for('edit_resume', filename=filename) }}" method="post">
         <!-- Add hidden input fields to send edited PDF data -->
         <textarea id="edited-pdf" name="edited_pdf" style="display: none;"></textarea>
         <button type="submit">Save</button>
