--- a/templates/resume/index.html
+++ b/templates/resume/index.html
@@ -7,7 +7,7 @@
     <h1>Resume Templates</h1>
     <ul>
         {% for template in resume_templates %}
-        <li><a href="{{ url_for('view_resume', filename=template) }}">{{ template }}</a></li>
+        <li><a href="{{ url_for('view_resume', filename=template) }}">{{ template }}</a>&nbsp<a href="{{ url_for('edit_resume', filename=template) }}">Edit</a></li>
         {% endfor %}
     </ul>
     <a href="{{ url_for('upload_resume') }}">Upload New Resume Template</a>
